WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303821
REGRESSION(
304036@main
): [GLib] ASSERTS due to attempt to use a session that doesn't exist yet
https://bugs.webkit.org/show_bug.cgi?id=303821
Summary
REGRESSION(304036@main): [GLib] ASSERTS due to attempt to use a session that ...
Philippe Normand
Reported
2025-12-09 03:45:03 PST
https://ews-build.s3-us-west-2.amazonaws.com/WPE-WK2-Tests-EWS/f6bd1303-102869-repeat-failures/fast/mediastream/audio-unit-reconfigure-crash-log.txt
crash log for WPEWebProcess (pid 605894): Coredump core-pid_605894.dump not found. To enable crash logs: - run this command as super-user: echo "/path/to/coredumps/core-pid_%p.dump" > /proc/sys/kernel/core_pattern - enable core dumps: ulimit -c unlimited - set the WEBKIT_CORE_DUMPS_DIRECTORY environment variable: export WEBKIT_CORE_DUMPS_DIRECTORY=/path/to/coredumps STDERR: ASSERTION FAILED: session STDERR: ../../../Source/WebCore/platform/audio/glib/MediaSessionManagerGLib.cpp(280) : void WebCore::MediaSessionManagerGLib::setPrimarySessionIfNeeded(WebCore::PlatformMediaSessionInterface&) STDERR: 1 0x7f53ebc15264 WebCore::MediaSessionManagerGLib::setPrimarySessionIfNeeded(WebCore::PlatformMediaSessionInterface&) STDERR: 2 0x7f53ebc15291 WebCore::MediaSessionManagerGLib::setCurrentSession(WebCore::PlatformMediaSessionInterface&) STDERR: 3 0x7f53ebbfacd3 WebCore::MediaSessionManagerInterface::sessionWillBeginPlayback(WebCore::PlatformMediaSessionInterface&, WTF::CompletionHandler<void (bool)>&&) STDERR: 4 0x7f53ebc0afdc WebCore::MediaSessionManagerGLib::sessionWillBeginPlayback(WebCore::PlatformMediaSessionInterface&, WTF::CompletionHandler<void (bool)>&&) STDERR: 5 0x7f53ebbfd33a WebCore::PlatformMediaSession::clientWillBeginPlayback(WTF::CompletionHandler<void (bool)>&&) STDERR: 6 0x7f53ea506857 WebCore::AudioContext::willBeginPlayback(WTF::CompletionHandler<void (bool)>&&) STDERR: 7 0x7f53ea507ece WebCore::AudioContext::startRendering() STDERR: 8 0x7f53ea525296 WebCore::AudioScheduledSourceNode::AudioScheduledSourceNode(WebCore::BaseAudioContext&, WebCore::AudioNode::NodeType) STDERR: 9 0x7f53ea55c53b WebCore::OscillatorNode::OscillatorNode(WebCore::BaseAudioContext&, WebCore::OscillatorOptions const&) STDERR: 10 0x7f53ea569333 WebCore::OscillatorNode::create(WebCore::BaseAudioContext&, WebCore::OscillatorOptions const&) STDERR: 11 0x7f53ea5423ee WebCore::BaseAudioContext::createOscillator() STDERR: 12 0x7f53e8a00f71 WebCore::jsBaseAudioContextPrototypeFunction_createOscillator(JSC::JSGlobalObject*, JSC::CallFrame*) STDERR: 13 0x7f538c40c038 ??? STDERR: WPEWebProcess terminated (pid 605894) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-12-09 03:48:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55099
EWS
Comment 2
2025-12-09 07:44:05 PST
Committed
304161@main
(c67e526c224a): <
https://commits.webkit.org/304161@main
> Reviewed commits have been landed. Closing PR #55099 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-09 07:45:12 PST
<
rdar://problem/166146112
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug