REGRESSION(304036@main): [GLib] ASSERTS due to attempt to use a session that doesn't exist yet https://bugs.webkit.org/show_bug.cgi?id=303821

Reviewed by Xabier Rodriguez-Calvar.

Since 304036@main the setPrimarySessionIfNeeded() method is called from the now asynchronous
sessionWillBeginPlayback() method, so we cannot assume that the internal session has been created
yet.

* Source/WebCore/platform/audio/glib/MediaSessionManagerGLib.cpp:
(WebCore::MediaSessionManagerGLib::addSession):
(WebCore::MediaSessionManagerGLib::setPrimarySessionIfNeeded):

Canonical link: https://commits.webkit.org/304161@main